2004-07-05 Kilian Krause <kk@verfaction.de>

	* configure.in: Updated REC versions of libs.

2004-07-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Lowered deps.

	* src/endpoint.cpp: Removed code using ffmpeg capabilities.

2004-06-29  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/endpoint.cpp, src/gnomemeeting.cpp, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h: Started to GMObjectify the
	main window.
	
2004-06-28  Damien Sandras  <dsandras@gnome.org>

	* configure.in, lib/contacts/Makefile.am: Enable EDS by default in
	case of GNOME build, disable it in case of non-GNOME build.

2004-06-24  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-local.h
	lib/contacts/gm_contacts.cpp: Added possibility to modify the name
	of a local address book.

	* src/addressbook_window.cpp: Do not display the popup menu if
	no contact is selected.

2004-06-21  Damien Sandras  <dsandras@gnome.org>

	SKYPE IS HYPE

	* configure.in: Incremented GCONF_SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Added key for the remote address books.
	That deprecates the old ldap_server_lists.

	* lib/contacts/gm_contacts-eds.cpp,
	lib/contacts/gm_contacts-remote.cpp, lib/contacts/gm_contacts.cpp, 
	src/addressbook_window.cpp: Added support for the new key. Added
	support to display the software version in ILS.
	 
2004-06-20  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp, src/callbacks.cpp, 
	src/calls_history_window.cpp, src/gnomemeeting.cpp, 
	src/gnomemeeting.h, src/lid.cpp: Changed API of Connect so that
	it takes the URL to call instead of reading it from the GUI in case
	an URL must be called. Added back the possibility to call users from
	the address book or from the calls history using double-click or the
	right-click popup menu.

2004-06-20  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp, src/addressbook_window.h: Permit 