@@ -42,7 +42,7 @@ AC_CHECK_DECLS(strcasecmp)
 dnl ###########################################################################
 dnl   This is to check correct gconf installation
 dnl ###########################################################################
-SCHEMA_AGE=48
+SCHEMA_AGE=49
 AC_SUBST(SCHEMA_AGE)
 
 
