@@ -1,3 +1,12 @@
+2004-07-06  Damien Sandras  <dsandras@gnome.org>
+
+	* configure.in: Incremented SCHEMA_AGE.
+
+	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/pref_window.cpp:
+	Added preliminary STUN support to go through non-symmetric NAT routers.
+
+	* src/main_window.cpp: Cleanups.
+
 2004-07-05 Kilian Krause <kk@verfaction.de>
 
 	* configure.in: Updated REC versions of libs.
